--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <div id="cursor-shadow"></div>
 <!-- CARRUSEL REDES -->
 <div class="social-carousel">
-    <a href="https://www.linkedin.com/in/lucas-di-crocco-b213aa30b/" target="_blank">
-        <img src="docs\icons\linkedin.svg" alt="LinkedIn">
+    <a href="https://www.linkedin.com/in/lucas-di-crocco-b213aa30b/"  target="_blank">
+        <img src="docs\icons\linkedin.png" alt="LinkedIn">
     </a>
     <a href="https://github.com/DicroccoL" target="_blank">
-        <img src="docs\icons\github.svg" alt="GitHub">
+        <img src="docs\icons\github.png" alt="GitHub">
     </a>
     <a href="mailto:tuemail@gmail.com">
-        <img src="docs\icons\correo.svg" alt="Email">
+        <img src="docs\icons\correo.png" alt="Email">
     </a>
 </div>
 
